--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
+    "animate.css": "^3.7.0",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.3.1",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11",
+    "paper": "^0.12.0",
+    "popper": "^1.0.1",
+    "rails-ujs": "^5.2.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react_ujs": "^2.5.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
