--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
     "animate.css": "^3.7.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "immutable": "^4.0.0-rc.12",
@@ -18,6 +20,7 @@
     "lodash": "^4.17.11",
     "paper": "^0.12.0",
     "popper.js": "^1.15.0",
+    "prop-types": "^15.7.2",
     "rails-ujs": "^5.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
