--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "paper": "^0.12.0",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
@@ -25,6 +26,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react_ujs": "^2.5.0",
+    "slate": "^0.45.0",
+    "slate-auto-replace": "^0.12.1",
+    "slate-edit-list": "^0.12.1",
+    "slate-html-serializer": "^0.7.38",
+    "slate-paste-linkify": "^0.7.0",
+    "slate-react": "^0.21.20",
+    "slate-soft-break": "^0.9.0",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
