--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
+    "@types/react": "^16.8.14",
+    "@types/react-dom": "^16.8.4",
     "animate.css": "^3.7.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
-    "immutable": "^4.0.0-rc.12",
+    "immutable": "3.8.1",
+    "is-hotkey": "^0.1.4",
+    "is-url": "^1.2.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -26,14 +30,16 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react_ujs": "^2.5.0",
-    "slate": "^0.45.0",
+    "slate": "0.45.0",
     "slate-auto-replace": "^0.12.1",
     "slate-edit-list": "^0.12.1",
     "slate-html-serializer": "^0.7.38",
     "slate-paste-linkify": "^0.7.0",
     "slate-react": "^0.21.20",
     "slate-soft-break": "^0.9.0",
-    "turbolinks": "^5.2.0"
+    "ts-loader": "^5.3.3",
+    "turbolinks": "^5.2.0",
+    "typescript": "^3.4.4"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
