--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.2",
+    "@rails/webpacker": "^4.0.7",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
     "animate.css": "^3.7.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "core-js": "3",
     "immutable": "3.8.1",
     "is-hotkey": "^0.1.4",
     "is-url": "^1.2.4",
