--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "circular-std": "^1.0.0",
     "core-js": "3",
     "immutable": "3.8.1",
     "is-hotkey": "^0.1.4",
