--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -34,9 +34,6 @@ default: &default
     - .woff2
 
   extensions:
-    - .tsx
-    - .ts
-    - .jsx
     - .mjs
     - .js
     - .sass
@@ -55,7 +52,7 @@ development:
   <<: *default
   compile: true
 
-  # Verifies that versions and hashed value of the package contents in the project's package.json
+  # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
   check_yarn_integrity: true
 
   # Reference: https://webpack.js.org/configuration/dev-server/
@@ -64,7 +61,7 @@ development:
     host: localhost
     port: 3035
     public: localhost:3035
-    hmr: true
+    hmr: false
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
