Revert "Merge branch 'rails-bump' into 'master'"
This reverts merge request !1

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -34,6 +34,9 @@ default: &default
     - .woff2
 
   extensions:
+    - .tsx
+    - .ts
+    - .jsx
     - .mjs
     - .js
     - .sass
@@ -52,7 +55,7 @@ development:
   <<: *default
   compile: true
 
-  # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
+  # Verifies that versions and hashed value of the package contents in the project's package.json
   check_yarn_integrity: true
 
   # Reference: https://webpack.js.org/configuration/dev-server/
@@ -61,7 +64,7 @@ development:
     host: localhost
     port: 3035
     public: localhost:3035
-    hmr: false
+    hmr: true
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
