--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ before_script:
   - apt-get update -qq && apt-get install -y -qq postgresql postgresql-contrib libpq-dev cmake nodejs libpq-dev
   - ruby -v
   - which ruby
-  - gem install bundler --no-ri --no-rdoc
+  - gem install bundler
   - RAILS_ENV=test bundle install --jobs $(nproc) "${FLAGS[@]}"
   - cp config/database.yml.gitlab config/database.yml
   - curl -o- -L https://yarnpkg.com/install.sh | bash
