--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
     "@rails/actioncable": "^6.0.0-alpha",
+    "@rails/actiontext": "^6.0.0",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
@@ -38,6 +39,7 @@
     "slate-paste-linkify": "^0.7.0",
     "slate-react": "^0.22.0",
     "slate-soft-break": "^0.9.0",
+    "trix": "^1.0.0",
     "ts-loader": "^5.3.3",
     "turbolinks": "^5.2.0",
     "typescript": "^3.4.4"
